<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_home">홈</string>
    <string name="text_reservation_schedule">예약일정</string>
    <string name="text_ask">문의하기</string>
    <string name="text_profile">내정보</string>
    <string name="text_logo">로고</string>
    <string name="text_back">뒤로가기</string>
    <string name="text_share">공유하기</string>
    <string name="text_bookmark">북마크</string>
    <string name="text_rating">평점</string>
    <string name="text_work_time">운영시간</string>
    <string name="text_addr">주소</string>
    <string name="text_concept_flash">플래쉬/아이돌</string>
    <string name="text_concept_actor">흑백/블루 배우</string>
    <string name="text_concept_watercolor">필터/수채화 그림체 느낌</string>
    <string name="text_concept_natural">내추럴 화보 느낌</string>
    <string name="text_concept_clarity_doll">선명하고 인형같은 느낌</string>
    <string name="text_concept_vibrancy">생동감 있는 실물느낌</string>
    <string name="text_filter_price">가격순</string>
    <string name="text_filter_region">지역순</string>
    <string name="text_filter_rating">평점 높은순</string>
    <string name="text_filter_all">전체 선택</string>
    <string name="text_filter_price_low">10만원 미만</string>
    <string name="text_filter_price_middle">10만원 이상</string>
    <string name="text_filter_price_high">20만원 이상</string>
    <string name="text_region_gangnam">강남구</string>
    <string name="text_region_seocho">서초구</string>
    <string name="text_region_songpa">송파구</string>
    <string name="text_region_gangseo">강서구</string>
    <string name="text_region_mapo">마포구</string>
    <string name="text_region_yeongdeunpo">영등포구</string>
    <string name="text_region_gangbuk">강북구</string>
    <string name="text_region_yongsan">용산구</string>
    <string name="text_region_seongdong">성동구</string>
    <string name="text_done">완료하기</string>
    <string name="text_product_price">가 격</string>
    <string name="text_product_guests">인원</string>
    <string name="text_product_add_guests">추가인원</string>
    <string name="text_product_add_option">추가 구매</string>
    <string name="text_product_add_option_not">선택 안함</string>
    <string name="text_product_reservation">촬영날짜</string>
    <string name="text_product_reservation_button">예약하실 날짜를 선택해주세요</string>
    <string name="text_product_order">선택 상품 주문</string>
    <string name="text_product_able_time">예약 가능한 시간</string>
    <string name="text_product_change_reservation">날짜 변경</string>
    <string name="reserve_studio_name">예약 스튜디오</string>
    <string name="reserve_person_name">예약자 성함</string>
    <string name="text_studio">스튜디오화면</string>
    <string name="text_studio_product_detail">상품상세화면</string>
    <string name="text_add_option">추가 구매</string>
    <string name="text_calendar_placeholder_">예약일자 및 시간 선택</string>
    <string name="text_selectable_time_table">선택 가능한 시간대</string>
    <string name="morning">오전</string>
    <string name="afternoon">오후</string>
    <string name="btn_add">증가버튼</string>
    <string name="btn_sub">감소버튼</string>
    <string name="reservation_date">촬영날짜</string>
    <string name="select_date">날짜 선택</string>
    <string name="reserve_info">예약 정보</string>
    <string name="wait_for_reserve">예약 대기</string>
    <string name="reserve_product">주문 상품</string>
    <string name="reserve_people_info">주문자 정보</string>
    <string name="payment_info">결제 정보</string>
    <string name="total_price">총 결제 금액</string>
    <string name="text_submit_reserve">예약하기</string>
    <string name="text_reserve_complete">예약 확정</string>
    <string name="reservation">주문/예약</string>
    <string name="text_empty">결과가 없습니다</string>
    <string name="text_reservation_studio_name">스튜디오명</string>
    <string name="text_reservation_product_name">상품명</string>
    <string name="text_reservation_add_option">추가옵션</string>
    <string name="text_reservation_user_name">예약자명</string>
    <string name="text_reservation_user_phone">예약자 연락처</string>
    <string name="text_reservation_email">예약자 이메일</string>
    <string name="text_reservation_navigate_studio_home">스튜디오 홈</string>
    <string name="text_reservation_cancel">예약취소</string>
    <string name="text_reservation_list">예약 내역</string>
    <string name="text_reservation_info">예약정보</string>
    <string name="text_reservation_state_waiting">예약 대기</string>
    <string name="text_reservation_state_complete">예약 확정</string>
    <string name="text_reservation_state_cancel">예약 취소</string>
    <string name="text_reservation_state_usage_done">촬영 완료</string>
    <string name="text_reservation_cancel_request">예약 취소하기</string>
    <string name="text_reservation_state_info_title">※ 예약 상태는 아래와 같습니다</string>
    <string name="text_reservation_state_info_waiting">스튜디오에 예약을 신청한 상태입니다. 스튜디오에서 확인이 되면 예약 완료나 예약 취소 상태로 변경됩니다.</string>
    <string name="text_reservation_state_info_complete">스튜디오에서 예약을 완료한 상태입니다. 예약 날짜에 촬영을 진행하면 됩니다. 사용자가 예약을 취소할 수 있는 상태입니다.</string>
    <string name="text_reservation_state_info_cancel">스튜디오에서 예약을 취소한 상태입니다. 다른 날짜로 예약을 다시 진행해야 합니다.</string>
    <string name="text_reservation_state_info_usage_done">사용자가 예약한 시간에 촬영이 완료된 상태입니다. 스튜디오에 리뷰를 남길 수 있습니다.</string>
    <string name="text_reservation_order_product">"주문 상품</string>
    <string name="text_reservation_pay_info">결제 정보</string>
    <string name="text_reservation_total_price">총 결제 금액</string>
    <string name="text_reservation_day">예약 날짜</string>
    <string name="text_reservation_time">예약 시간</string>
    <string name="login_with_kakaotalk">카카오로 로그인</string>
    <string name="text_logo_message_top">나에게 딱 맞는 스튜디오를</string>
    <string name="text_logo_message_middle">한 눈에 살펴보세요.</string>
    <string name="text_logo_message_bottom">컨셉별 스튜디오를 확인 후 예약까지 간편하게!</string>
    <string name="text_modify_nickname">닉네임 수정</string>
    <string name="text_nickname">닉네임</string>
    <string name="text_plz_input_nickname">닉네임</string>
    <string name="text_check_duplicate">중복확인</string>
    <string name="text_modify">수정하기</string>
    <string name="text_login_fail">로그인에 실패했습니다.</string>
    <string name="text_empty_list">내역이 없습니다</string>
    <string name="text_empty_result">검색 결과가 없습니다</string>
    <string name="text_like">찜</string>
    <string name="text_like_list">찜 목록</string>
    <string name="text_empty_bookmark_list">아직 찜한 스튜디오가 없습니다</string>
    <string name="text_would_you_login">로그인 하시겠습니까?</string>
    <string name="text_have_to_login">로그인이 필요한 서비스입니다.</string>
    <string name="text_go_to_login">로그인하러 가기</string>
    <string name="text_look_around">둘러보기</string>
    <string name="text_cancel">취소</string>
</resources>