<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_result_view"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.view.fragment.ResultViewFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_tc_chevron_left"
        app:title="TOOCHEESE" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_bt_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ImageButton
            android:id="@+id/bt_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_tc_reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_filter_price"
            style="@style/tc_bt_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/text_filter_price"
            app:icon="@drawable/ic_tc_chevron_down"
            app:layout_constraintBottom_toBottomOf="@+id/bt_reset"
            app:layout_constraintStart_toEndOf="@id/bt_reset"
            app:layout_constraintTop_toTopOf="@+id/bt_reset" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_filter_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/text_filter_region"
            style="@style/tc_bt_filter"
            app:icon="@drawable/ic_tc_chevron_down"
            app:layout_constraintStart_toEndOf="@+id/bt_filter_price"
            app:layout_constraintTop_toTopOf="@+id/bt_filter_price" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_filter_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/text_filter_rating"
            style="@style/tc_bt_filter"
            app:icon="@drawable/ic_tc_chevron_down"
            app:layout_constraintStart_toEndOf="@+id/bt_filter_region"
            app:layout_constraintTop_toTopOf="@+id/bt_filter_region" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_studio_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_bt_filter" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_empty_result"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/text_empty_result"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>