<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingHorizontal="10dp"
        tools:context=".main.view.fragment.ProductDetailViewFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_product_detail_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_product_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/toolbar_product_detail_view"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_product_detail_view">

            <ImageView
                android:id="@+id/iv_product_image"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginStart="128dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image_test"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="증명사진"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_product_image" />

            <TextView
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="설명\n설명\n설명"
                app:layout_constraintStart_toStartOf="@+id/tv_product_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_product_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_product_detail">

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_product_price"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_price_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="75,000원"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_product_option" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_product_add_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <TextView
                android:id="@+id/tv_guest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_product_guests"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_guest_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/bt_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_add_24px"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_count_guest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:text="1"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintStart_toEndOf="@+id/bt_plus"
                    app:layout_constraintTop_toTopOf="@+id/bt_plus" />

                <ImageButton
                    android:id="@+id/bt_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_remove_24px"
                    app:layout_constraintStart_toEndOf="@+id/tv_count_guest"
                    app:layout_constraintTop_toTopOf="@+id/bt_plus" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_product_add_option" />

        <TextView
            android:id="@+id/tv_add_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_product_add_option"
            app:layout_constraintStart_toStartOf="@+id/divider2"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_add_option_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/tv_add_option"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_option">

            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="추가옵션"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="추가옵션"
                app:layout_constraintStart_toStartOf="@+id/checkbox1"
                app:layout_constraintTop_toBottomOf="@+id/checkbox1" />

            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="추가옵션"
                app:layout_constraintStart_toStartOf="@+id/checkbox2"
                app:layout_constraintTop_toBottomOf="@+id/checkbox2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintStart_toStartOf="@+id/layout_add_option_checkbox"
            app:layout_constraintTop_toBottomOf="@+id/layout_add_option_checkbox" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_product_reservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3">

            <TextView
                android:id="@+id/tv_product_reservation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:text="@string/text_product_reservation"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_select_reservation_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_product_reservation_button"
                app:layout_constraintStart_toStartOf="@+id/tv_product_reservation"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_reservation" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_product_reservation"
            app:layout_constraintStart_toStartOf="@+id/layout_product_reservation"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_cart"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:icon="@drawable/icon_shopping_cart_24px"
            app:iconGravity="textStart"
            app:layout_constraintHorizontal_weight="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_product_reservation" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_order"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/text_product_order"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.7"
            app:layout_constraintStart_toEndOf="@+id/bt_cart"
            app:layout_constraintTop_toBottomOf="@+id/layout_product_reservation" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

